--- a/main.html
+++ b/main.html
@@ -1,16 +1,39 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>Architectural Information</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+  <div class="content-wrapper">
+    <div class="imageContainer">
+      <img src="path/to/your/image.jpg" alt="Architecture Image">
+    </div>
+    <table class="architecture-table">
+      <tr>
+        <td class="column-image" style="width: 200px;">
+          <img src="path/to/your/image1.jpg" alt="Architecture Image 1">
+        </td>
+        <td class="column-text" style="width: 600px;">Text Content</td>
+        <td class="column-image" style="width: 200px;">
+          <img src="path/to/your/image2.jpg" alt="Architecture Image 2">
+        </td>
+      </tr>
+      <tr>
+        <td class="column-image" style="width: 200px;">
+          <img src="path/to/your/image3.jpg" alt="Architecture Image 3">
+        </td>
+        <td class="column-text" style="width: 600px;">Text Content</td>
+        <td class="column-image" style="width: 200px;">
+          <img src="path/to/your/image4.jpg" alt="Architecture Image 4">
+        </td>
+      </tr>
+      <!-- Add more rows as needed -->
+    </table>
+  </div>
 </body>
 
 </html>
